--- a/Demo.Languages2/Demo.Languages2.AngularJS.MultipleControllerTest/Demo.Languages2.AngularJS.MultipleControllerTest.csproj
+++ b/Demo.Languages2/Demo.Languages2.AngularJS.MultipleControllerTest/Demo.Languages2.AngularJS.MultipleControllerTest.csproj
@@ -111,6 +111,9 @@
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\angular.min.js.map" />
     <Content Include="Scripts\angular-route.min.js.map" />
+    <Content Include="Scripts\app-mainCtrl.js" />
+    <Content Include="Scripts\app-outerCtrl.js" />
+    <Content Include="Scripts\app-secondCtrl.js" />
     <Content Include="Scripts\app.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
