--- a/Demo.Languages2/Demo.Languages2.AngularJS.MultipleControllerTest/Demo.Languages2.AngularJS.MultipleControllerTest.csproj
+++ b/Demo.Languages2/Demo.Languages2.AngularJS.MultipleControllerTest/Demo.Languages2.AngularJS.MultipleControllerTest.csproj
@@ -118,6 +118,8 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\directives\area1.js" />
+    <Content Include="Scripts\directives\area2.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
@@ -125,6 +127,8 @@
     <Content Include="Scripts\jquery-2.1.4.js" />
     <Content Include="Scripts\jquery-2.1.4.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\templates\area1.html" />
+    <Content Include="Scripts\templates\area2.html" />
     <Content Include="Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
