--- a/Demo.Languages2/Demo.Languages2.AngularJS.MultipleControllerTest/packages.config
+++ b/Demo.Languages2/Demo.Languages2.AngularJS.MultipleControllerTest/packages.config
@@ -2,8 +2,10 @@
 <packages>
   <package id="AngularJS.Core" version="1.4.8" targetFramework="net452" />
   <package id="AngularJS.Route" version="1.4.8" targetFramework="net452" />
+  <package id="angularjs.TypeScript.DefinitelyTyped" version="4.4.0" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="2.3.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
