--- a/Demo.Languages2/Demo.Languages2.TypeScriptTest01/packages.config
+++ b/Demo.Languages2/Demo.Languages2.TypeScriptTest01/packages.config
@@ -6,4 +6,6 @@
   <package id="bootstrap" version="3.3.6" targetFramework="net452" />
   <package id="jQuery" version="2.1.4" targetFramework="net452" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="2.3.3" targetFramework="net452" />
+  <package id="toastr" version="2.1.1" targetFramework="net452" />
+  <package id="toastr.TypeScript.DefinitelyTyped" version="0.1.6" targetFramework="net452" />
 </packages>
