--- a/Demo.Languages2/Demo.Languages2.TypeScriptTest01/Demo.Languages2.TypeScriptTest01.csproj
+++ b/Demo.Languages2/Demo.Languages2.TypeScriptTest01/Demo.Languages2.TypeScriptTest01.csproj
@@ -53,6 +53,7 @@
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.4.js" />
     <Content Include="Scripts\jquery-2.1.4.min.js" />
+    <Content Include="Scripts\Polymorphism.js" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
     <Content Include="web.config" />
@@ -60,6 +61,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="app.ts" />
     <TypeScriptCompile Include="Scripts\BestCommonType.ts" />
+    <TypeScriptCompile Include="Scripts\Polymorphism.ts" />
     <TypeScriptCompile Include="Scripts\typings\angularjs\angular-animate.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\angularjs\angular-cookies.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\angularjs\angular-mocks.d.ts" />
@@ -75,6 +77,7 @@
     <Content Include="packages.config" />
     <Content Include="Scripts\angular-route.min.js.map" />
     <Content Include="Scripts\jquery-2.1.4.min.map" />
+    <Content Include="Scripts\Polymorphism.js.map" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
