--- a/Demo.Languages2/Demo.Languages2.RequireJS/Demo.Languages2.RequireJS.csproj
+++ b/Demo.Languages2/Demo.Languages2.RequireJS/Demo.Languages2.RequireJS.csproj
@@ -85,6 +85,8 @@
   <ItemGroup>
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\lodash.underscore.js" />
+    <Content Include="Scripts\lodash.underscore.min.js" />
     <Content Include="Scripts\main.js" />
     <Content Include="Scripts\r.js" />
     <Content Include="Scripts\require.js" />
