--- a/Demo.Languages2/Demo.Languages2.RequireJS/packages.config
+++ b/Demo.Languages2/Demo.Languages2.RequireJS/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="jQuery" version="2.1.4" targetFramework="net452" />
+  <package id="lodash.underscore" version="2.4.1" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="RequireJS" version="2.1.22" targetFramework="net452" />
