--- a/Demo.Languages2/Demo.Languages2.RequireJS/Demo.Languages2.RequireJS.csproj
+++ b/Demo.Languages2/Demo.Languages2.RequireJS/Demo.Languages2.RequireJS.csproj
@@ -72,6 +72,7 @@
     <Content Include="content\toastr.scss" />
     <Content Include="content\toastr.less" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
+    <Content Include="Scripts\config.js" />
     <Content Include="Scripts\jquery-2.1.4.js" />
     <Content Include="Scripts\jquery-2.1.4.min.js" />
     <Content Include="Scripts\jquery-2.1.4.min.map" />
