--- a/Demo.Languages2/Demo.Languages2.RequireJS/Demo.Languages2.RequireJS.csproj
+++ b/Demo.Languages2/Demo.Languages2.RequireJS/Demo.Languages2.RequireJS.csproj
@@ -91,6 +91,7 @@
     <Content Include="Scripts\main.js" />
     <Content Include="Scripts\r.js" />
     <Content Include="Scripts\require.js" />
+    <Content Include="Scripts\tasks\task1.js" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
     <Content Include="Web.config" />
