--- a/Demo.Languages2/Demo.Languages2.RequireJS/Demo.Languages2.RequireJS.csproj
+++ b/Demo.Languages2/Demo.Languages2.RequireJS/Demo.Languages2.RequireJS.csproj
@@ -92,8 +92,10 @@
     <Content Include="Scripts\r.js" />
     <Content Include="Scripts\require.js" />
     <Content Include="Scripts\tasks\task1.js" />
+    <Content Include="Scripts\text.js" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
+    <Content Include="Templates\taskTemplate.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
