updated browserify parameter

--- a/Demo.Languages2/Demo.Languages2.Browserify/Demo.Languages2.Browserify.csproj
+++ b/Demo.Languages2/Demo.Languages2.Browserify/Demo.Languages2.Browserify.csproj
@@ -238,7 +238,7 @@
     <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
   </Target>
   <PropertyGroup>
-    <PreBuildEvent>browserify $(ProjectDir)/js/app.js -o $(ProjectDir)/js/app.bundle.js</PreBuildEvent>
+    <PreBuildEvent>browserify $(ProjectDir)/js/app.js -o $(ProjectDir)/js/app.bundle.js --debug</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
