--- a/Demo.Languages2/Demo.Languages2.TypeScriptTest01/Demo.Languages2.TypeScriptTest01.csproj
+++ b/Demo.Languages2/Demo.Languages2.TypeScriptTest01/Demo.Languages2.TypeScriptTest01.csproj
@@ -386,7 +386,9 @@
     <Content Include="node_modules\toastr\toastr.scss" />
     <Content Include="Scripts\app2.js.map" />
     <Content Include="Scripts\app2-main.js.map" />
+    <Content Include="Scripts\greeter.js.map" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
+    <Content Include="Scripts\greeter.js" />
     <Content Include="Scripts\jquery-2.1.4.js" />
     <Content Include="Scripts\jquery-2.1.4.min.js" />
     <Content Include="Scripts\Polymorphism.js" />
@@ -402,6 +404,7 @@
     <TypeScriptCompile Include="Scripts\app2-main.ts" />
     <TypeScriptCompile Include="Scripts\app2.ts" />
     <TypeScriptCompile Include="Scripts\BestCommonType.ts" />
+    <TypeScriptCompile Include="Scripts\greeter.ts" />
     <TypeScriptCompile Include="Scripts\Polymorphism.ts" />
     <TypeScriptCompile Include="Scripts\Shape.ts" />
     <TypeScriptCompile Include="Scripts\typings\angularjs\angular-animate.d.ts" />
