added RequireJS definitely typed file

--- a/Demo.Languages2/Demo.Languages2.TypeScriptTest01/Demo.Languages2.TypeScriptTest01.csproj
+++ b/Demo.Languages2/Demo.Languages2.TypeScriptTest01/Demo.Languages2.TypeScriptTest01.csproj
@@ -415,6 +415,7 @@
     <TypeScriptCompile Include="Scripts\typings\angularjs\angular-sanitize.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\angularjs\angular.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\jquery\jquery.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\requirejs\require.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\toastr\toastr.d.ts" />
   </ItemGroup>
   <ItemGroup>
