--- a/Demo.Languages2/Demo.Languages2.RequireJS/packages.config
+++ b/Demo.Languages2/Demo.Languages2.RequireJS/packages.config
@@ -5,5 +5,6 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="RequireJS" version="2.1.22" targetFramework="net452" />
+  <package id="requirejs.TypeScript.DefinitelyTyped" version="0.2.9" targetFramework="net452" />
   <package id="toastr" version="2.1.1" targetFramework="net452" />
 </packages>
