--- a/Demo.Languages2/Demo.Languages2.MixingAngularTypeScriptRequireJS/Demo.Languages2.MixingAngularTypeScriptRequireJS.csproj
+++ b/Demo.Languages2/Demo.Languages2.MixingAngularTypeScriptRequireJS/Demo.Languages2.MixingAngularTypeScriptRequireJS.csproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="js\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
