--- a/Demo.Languages2/Demo.Languages2.MixingAngularTypeScriptRequireJS/packages.config
+++ b/Demo.Languages2/Demo.Languages2.MixingAngularTypeScriptRequireJS/packages.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="AngularJS.Core" version="1.4.8" targetFramework="net452" />
+  <package id="AngularJS.Route" version="1.4.8" targetFramework="net452" />
+  <package id="angularjs.TypeScript.DefinitelyTyped" version="4.4.0" targetFramework="net452" />
+  <package id="bootstrap" version="3.3.6" targetFramework="net452" />
+  <package id="jQuery" version="2.1.4" targetFramework="net452" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="2.3.3" targetFramework="net452" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net452" />
+  <package id="Microsoft.Net.Compilers" version="1.1.1" targetFramework="net452" developmentDependency="true" />
+  <package id="RequireJS" version="2.1.22" targetFramework="net452" />
+  <package id="requirejs.TypeScript.DefinitelyTyped" version="0.2.9" targetFramework="net452" />
 </packages>
