--- a/Demo.Languages2/Demo.Languages2.MixingAngularTypeScriptRequireJS/packages.config
+++ b/Demo.Languages2/Demo.Languages2.MixingAngularTypeScriptRequireJS/packages.config
@@ -10,4 +10,6 @@
   <package id="Microsoft.Net.Compilers" version="1.1.1" targetFramework="net452" developmentDependency="true" />
   <package id="RequireJS" version="2.1.22" targetFramework="net452" />
   <package id="requirejs.TypeScript.DefinitelyTyped" version="0.2.9" targetFramework="net452" />
+  <package id="toastr" version="2.1.1" targetFramework="net452" />
+  <package id="toastr.TypeScript.DefinitelyTyped" version="0.1.6" targetFramework="net452" />
 </packages>
