--- a/Demo.Languages2/Demo.Languages2.ReactJS/Web.config
+++ b/Demo.Languages2/Demo.Languages2.ReactJS/Web.config
@@ -18,7 +18,11 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
-  </system.web>
+  <!-- Uncomment if using IIS 7 Classic Mode, IIS 6, or Mono --><!--
+		<httpHandlers>
+			<add verb="GET" path="*.jsx" type="React.Web.JsxHandlerFactory, React.Web" />
+		</httpHandlers>
+		--></system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -27,11 +31,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -53,4 +57,7 @@
 				</hiddenSegments>
 			</requestFiltering>
 		</security>
-	</system.webServer></configuration>
+	<handlers>
+			<remove name="Babel" />
+			<add name="Babel" verb="GET" path="*.jsx" type="React.Web.BabelHandlerFactory, React.Web" preCondition="integratedMode" />
+		</handlers></system.webServer></configuration>
