--- a/Demo.Languages2/Demo.Languages2.ReactJS/packages.config
+++ b/Demo.Languages2/Demo.Languages2.ReactJS/packages.config
@@ -20,6 +20,9 @@
   <package id="React.Core" version="2.1.2" targetFramework="net452" />
   <package id="react.js" version="0.13.1" targetFramework="net452" />
   <package id="React.TypeScript.DefinitelyTyped" version="0.1.12" targetFramework="net452" />
+  <package id="React.Web" version="2.1.2" targetFramework="net452" />
+  <package id="React.Web.Mvc4" version="2.1.2" targetFramework="net452" />
   <package id="RequireJS" version="2.1.22" targetFramework="net452" />
   <package id="requirejs.TypeScript.DefinitelyTyped" version="0.2.9" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0.5" targetFramework="net452" />
 </packages>
