can't make angular run with requirejs, yet need to read "http://beletsky.net/2013/11/using-angular-dot-js-with-require-dot-js.html"

--- a/Demo.Languages2/Demo.Languages2.MixingAngularTypeScriptRequireJS/Demo.Languages2.MixingAngularTypeScriptRequireJS.csproj
+++ b/Demo.Languages2/Demo.Languages2.MixingAngularTypeScriptRequireJS/Demo.Languages2.MixingAngularTypeScriptRequireJS.csproj
@@ -75,6 +75,7 @@
     <Content Include="Content\toastr.css" />
     <Content Include="Content\toastr.min.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="js\app.js" />
     <Content Include="js\main.js" />
     <Content Include="packages.config" />
     <Content Include="Scripts\angular-mocks.js" />
@@ -94,9 +95,9 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="js\main.js.map" />
     <Content Include="Content\toastr.scss" />
     <Content Include="Content\toastr.less" />
+    <Content Include="js\app.js.map" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.4.js" />
     <Content Include="Scripts\jquery-2.1.4.min.js" />
@@ -135,7 +136,7 @@
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="js\main.ts" />
+    <TypeScriptCompile Include="js\app.ts" />
     <TypeScriptCompile Include="Scripts\typings\angularjs\angular-animate.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\angularjs\angular-cookies.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\angularjs\angular-mocks.d.ts" />
