--- a/Demo.Languages2/Demo.Languages2.MixingAngularTypeScriptRequireJS/packages.config
+++ b/Demo.Languages2/Demo.Languages2.MixingAngularTypeScriptRequireJS/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="alertify" version="0.3.11" targetFramework="net452" />
+  <package id="alertify.TypeScript.DefinitelyTyped" version="0.6.1" targetFramework="net452" />
   <package id="AngularJS.Core" version="1.4.8" targetFramework="net452" />
   <package id="AngularJS.Route" version="1.4.8" targetFramework="net452" />
   <package id="angularjs.TypeScript.DefinitelyTyped" version="4.4.0" targetFramework="net452" />
