React component to use data from GitHub.

--- a/Demo.Languages2/Demo.Languages2.ReactJS/Demo.Languages2.ReactJS.csproj
+++ b/Demo.Languages2/Demo.Languages2.ReactJS/Demo.Languages2.ReactJS.csproj
@@ -176,6 +176,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Scripts\cardScript.jsx" />
     <None Include="Scripts\jquery-2.2.0.intellisense.js" />
     <Content Include="Scripts\jquery-2.2.0.js" />
     <Content Include="Scripts\jquery-2.2.0.min.js" />
