bootstrapping code for /home/game

--- a/Demo.Languages2/Demo.Languages2.ReactJS/Demo.Languages2.ReactJS.csproj
+++ b/Demo.Languages2/Demo.Languages2.ReactJS/Demo.Languages2.ReactJS.csproj
@@ -177,6 +177,7 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Scripts\cardScript.jsx" />
+    <Content Include="Scripts\gameScript.jsx" />
     <None Include="Scripts\jquery-2.2.0.intellisense.js" />
     <Content Include="Scripts\jquery-2.2.0.js" />
     <Content Include="Scripts\jquery-2.2.0.min.js" />
@@ -208,6 +209,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Card.cshtml" />
+    <Content Include="Views\Home\Game.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
