--- a/Demo.Languages2/Demo.Languages2.TypeScriptTest01/Demo.Languages2.TypeScriptTest01.csproj
+++ b/Demo.Languages2/Demo.Languages2.TypeScriptTest01/Demo.Languages2.TypeScriptTest01.csproj
@@ -397,6 +397,7 @@
     <Content Include="Scripts\Shape.js" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
+    <Content Include="ts\runtimeTest.js" />
     <Content Include="ts\scopeTest.js" />
     <Content Include="web.config" />
   </ItemGroup>
@@ -418,6 +419,7 @@
     <TypeScriptCompile Include="Scripts\typings\jquery\jquery.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\requirejs\require.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\toastr\toastr.d.ts" />
+    <TypeScriptCompile Include="ts\runtimeTest.ts" />
     <TypeScriptCompile Include="ts\scopeTest.ts" />
   </ItemGroup>
   <ItemGroup>
@@ -428,6 +430,7 @@
     <Content Include="Scripts\Polymorphism.js.map" />
     <Content Include="Scripts\Shape.js.map" />
     <Content Include="ts\scopeTest.js.map" />
+    <Content Include="ts\runtimeTest.js.map" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
