--- a/Demo.Languages2/Demo.Languages2.ReactJSEssentials/packages.config
+++ b/Demo.Languages2/Demo.Languages2.ReactJSEssentials/packages.config
@@ -1,12 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="bootstrap" version="3.0.0" targetFramework="net452" />
-  <package id="jQuery" version="1.10.2" targetFramework="net452" />
+  <package id="alertify" version="0.3.11" targetFramework="net452" />
+  <package id="alertify.TypeScript.DefinitelyTyped" version="0.6.1" targetFramework="net452" />
+  <package id="bootstrap" version="3.3.6" targetFramework="net452" />
+  <package id="JavaScriptEngineSwitcher.Core" version="1.2.4" targetFramework="net452" />
+  <package id="JavaScriptEngineSwitcher.Msie" version="1.4.0" targetFramework="net452" />
+  <package id="JavaScriptEngineSwitcher.V8" version="1.4.1" targetFramework="net452" />
+  <package id="jQuery" version="2.2.0" targetFramework="net452" />
+  <package id="JSPool" version="0.3.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net452" />
+  <package id="Microsoft.Net.Compilers" version="1.1.1" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
-  <package id="Modernizr" version="2.6.2" targetFramework="net452" />
+  <package id="Modernizr" version="2.8.3" targetFramework="net452" />
+  <package id="MsieJavaScriptEngine" version="1.6.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
+  <package id="React.Core" version="2.2.0" targetFramework="net452" />
+  <package id="React.TypeScript.DefinitelyTyped" version="0.1.12" targetFramework="net452" />
+  <package id="RequireJS" version="2.1.22" targetFramework="net452" />
+  <package id="requirejs.TypeScript.DefinitelyTyped" version="0.2.9" targetFramework="net452" />
 </packages>
