Successfully fixed relative path issue in asp.net mvc for javascript files. http://stackoverflow.com/a/24946539/4035

--- a/Demo.Languages2/Demo.Languages2.ReactJSEssentials/Demo.Languages2.ReactJSEssentials.csproj
+++ b/Demo.Languages2/Demo.Languages2.ReactJSEssentials/Demo.Languages2.ReactJSEssentials.csproj
@@ -20,9 +20,9 @@
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
-    <IISExpressAnonymousAuthentication />
-    <IISExpressWindowsAuthentication />
-    <IISExpressUseClassicPipelineMode />
+    <IISExpressAnonymousAuthentication>disabled</IISExpressAnonymousAuthentication>
+    <IISExpressWindowsAuthentication>enabled</IISExpressWindowsAuthentication>
+    <IISExpressUseClassicPipelineMode>false</IISExpressUseClassicPipelineMode>
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
@@ -154,6 +154,7 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="README.md" />
+    <None Include="Properties\PublishProfiles\Local IIS.pubxml" />
     <None Include="Scripts\jquery-2.2.0.intellisense.js" />
     <Content Include="Scripts\chapter03-main.js" />
     <Content Include="Scripts\jquery-2.2.0.js" />
@@ -162,6 +163,7 @@
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\r.js" />
     <Content Include="Scripts\require.js" />
+    <Content Include="Scripts\tasks\task1.js" />
     <Content Include="Web.config" />
     <Content Include="Views\Chapter03\Index.cshtml" />
   </ItemGroup>
